# RisuAI

./: .npmrc  Dockerfile  capacitor.config.ts.backup  co.aiclient.risu.desktop  co.aiclient.risu.metainfo.xml  co.aiclient.risu.yml  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: codeql.yml  docker-build.yml  github-actions-builder.yml
android-capacitor-backup/: build.gradle  capacitor.settings.gradle  gradlew
android-capacitor-backup/app/: build.gradle
android-capacitor-backup/app/release/: output-metadata.json
android-capacitor-backup/app/src/main/: AndroidManifest.xml
android-capacitor-backup/gradle/wrapper/: gradle-wrapper.properties
server/node/: server.cjs
src/: App.svelte  preload.ts
src-tauri/: Cargo.arm64.toml  Cargo.toml  tauri.conf.arm64.json  tauri.conf.json
src-tauri/capabilities/: desktop-arm.json  desktop-linux-arm.json  desktop.json  migrated.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/lang/: en.ts  ko.ts
src/lib/ChatScreens/: BackgroundDom.svelte  Chat.svelte  ChatScreen.svelte  DefaultChatScreen.svelte  ResizeBox.svelte  TransitionImage.svelte
src/lib/Others/: AlertComp.svelte  ChatList.svelte  GithubStars.svelte  GridCatalog.svelte  Help.svelte  HypaV3Modal.svelte  LazyAvatar.svelte
src/lib/Setting/Pages/: AdvancedSettings.svelte  PromptSettings.svelte  UserSettings.svelte
src/lib/SideBars/: BarIcon.svelte  CharConfig.svelte  SideChatList.svelte  Sidebar.svelte  SidebarAvatar.svelte  Toggles.svelte
src/lib/SideBars/LoreBook/: LoreBookData.svelte  (+2 more)
src/lib/UI/: Arcodion.svelte  BaseRoundedButton.svelte  ModelList.svelte  PromptDataItem.svelte  Title.svelte  VirtualScroll.svelte
src/ts/: alert.ts  characterCards.ts  globalApi.svelte.ts  update.ts  util.ts
src/ts/creation/: creator.ts
src/ts/drive/: backuplocal.ts
src/ts/gui/: tooltip.ts
src/ts/process/: modules.ts  processzip.ts
src/ts/storage/: autoStorage.ts  database.svelte.ts  mobileStorage.ts  risuSaveEnhanced.ts  testChunking.ts
(+18 files in other folders)
