[package]
name = "risuai"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = ["protocol-asset"] }
serde_json = "1.0"
tiktoken-rs = "0.4.0"
base64 = "0.21.0"
reqwest = { version = "0.11.16", features = ["json", "rustls-tls"], default-features = false }
darling = "0.20.3"
zip = "0.6.6"
tar = "0.4.40"
eventsource-client = "0.12.2"
futures = "0.3.30"
url = "2.2"
uuid = { version = "1.9.1", features = [ "v4" ] }
tauri-plugin-fs = "2.2.1"
tauri-plugin-os = "2.2.1"
tauri-plugin-dialog = "2.2.1"
tauri-plugin-process = "2.2.1"
tauri-plugin-shell = "2.2.1"
tauri-plugin-http = "2.4.3"
[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-deep-link = "2.2.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "risuai"
crate-type = ["staticlib", "cdylib", "rlib"]

# Windows와 macOS (모든 아키텍처)에서 updater와 single-instance 플러그인 사용
[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
tauri-plugin-single-instance = { version = "2.2.3", features = ["deep-link"] }
tauri-plugin-updater = "2.7.1"

# Linux x86_64에서만 updater와 single-instance 플러그인 사용
[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
tauri-plugin-single-instance = { version = "2.2.3", features = ["deep-link"] }
tauri-plugin-updater = "2.7.1"

# Linux ARM64에서는 single-instance만 사용 (updater 제외)
[target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
tauri-plugin-single-instance = { version = "2.2.3", features = ["deep-link"] }
